--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "apollo-client": "0.4.20",
     "vue": "^2.0.1",
+    "vue-apollo": "1.0.0-rc.1",
     "vue-router": "2.0.0"
   },
   "devDependencies": {
